# writer_medha

./: .gitignore  README.md  manage.py  pyproject.toml
writer/: admin.py  forms.py  models.py  urls.py  views.py
writer/migrations/: 0001_initial.py  0002_about_title_contact_title_editorial_title_home_title_and_more.py  0003_aboutpdf.py
writer/static/css/: styles.css
writer/templates/: about.html  base.html  contact.html  editorial.html  home.html  interview.html  prose.html  publication.html
writer_medha/: asgi.py  settings.py  urls.py  wsgi.py
